--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nx/js": "18.0.0-beta.2",
     "@nx/nuxt": "18.0.0-beta.2",
     "@nx/vite": "18.0.0-beta.2",
+    "@nx/vue": "18.0.0-beta.2",
     "@nx/web": "18.0.0-beta.2",
     "@nx/workspace": "18.0.0-beta.2",
     "@swc-node/register": "~1.6.7",
@@ -27,11 +28,14 @@
     "@vitejs/plugin-vue": "^4.5.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.0.4",
+    "@vue/eslint-config-prettier": "7.1.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.1",
     "cypress": "^13.0.0",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
+    "eslint-plugin-vue": "^9.16.1",
     "h3": "^1.8.2",
     "jsdom": "~22.1.0",
     "nuxt": "^3.10.0",
@@ -39,6 +43,7 @@
     "prettier": "^2.6.2",
     "typescript": "~5.3.2",
     "vite": "^5.0.0",
+    "vite-plugin-dts": "~2.3.0",
     "vitest": "^1.0.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
