--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@my-nuxt-workspace/my-vue-lib-1": ["libs/my-vue-lib-1/src/index.ts"],
-      "@my-nuxt-workspace/my-vue-lib-2": ["libs/my-vue-lib-2/src/index.ts"]
+      "@my-nuxt-workspace/my-vue-lib-2": ["libs/my-vue-lib-2/src/index.ts"],
+      "@my-nuxt-workspace/my-vue-lib-3": ["libs/my-vue-lib-3/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
