--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "@nuxt/devtools": "1.0.0",
     "@nuxt/eslint-config": "0.2.0",
@@ -15,10 +18,19 @@
     "@nx/eslint-plugin": "18.0.0-beta.2",
     "@nx/js": "18.0.0-beta.2",
     "@nx/nuxt": "18.0.0-beta.2",
+    "@nx/storybook": "18.0.0-beta.2",
     "@nx/vite": "18.0.0-beta.2",
     "@nx/vue": "18.0.0-beta.2",
     "@nx/web": "18.0.0-beta.2",
     "@nx/workspace": "18.0.0-beta.2",
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/core-server": "^7.5.3",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.2",
+    "@storybook/vue3": "^7.5.3",
+    "@storybook/vue3-vite": "^7.5.3",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
@@ -41,6 +53,9 @@
     "nuxt": "^3.10.0",
     "nx": "18.0.0-beta.2",
     "prettier": "^2.6.2",
+    "storybook": "^7.5.3",
+    "ts-node": "10.9.1",
+    "tslib": "^2.3.0",
     "typescript": "~5.3.2",
     "vite": "^5.0.0",
     "vite-plugin-dts": "~2.3.0",
