--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@nx/cypress": "18.0.4",
     "@nx/eslint": "18.0.4",
     "@nx/eslint-plugin": "18.0.4",
-    "@nx/js": "18.0.4",
-    "@nx/nuxt": "18.0.4",
+    "@nx/js": "18.1.0-beta.2",
+    "@nx/nuxt": "18.1.0-beta.2",
     "@nx/storybook": "18.0.4",
-    "@nx/vite": "18.0.4",
+    "@nx/vite": "18.1.0-beta.2",
     "@nx/vue": "18.0.4",
-    "@nx/web": "18.0.4",
+    "@nx/web": "18.1.0-beta.2",
     "@nx/workspace": "18.0.4",
     "@storybook/addon-essentials": "^7.5.3",
     "@storybook/addon-interactions": "^7.5.3",
@@ -65,4 +65,3 @@
     "vue-tsc": "^1.8.8"
   }
 }
-
