--- a/apps/my-nuxt-app-2/tsconfig.json
+++ b/apps/my-nuxt-app-2/tsconfig.json
@@ -1,7 +1,12 @@
 {
   "compilerOptions": {},
   "files": [],
-  "include": [],
+  "include": [
+    "./.nuxt/nuxt.d.ts",
+    "./.nuxt/imports.d.ts",
+    "./.nuxt/components.d.ts",
+    "./.nuxt/types/**/*.ts"
+  ],
   "references": [
     {
       "path": "./tsconfig.app.json"
