--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "@nuxt/eslint-config": "0.2.0",
     "@nuxt/kit": "^3.10.0",
     "@nuxt/ui-templates": "^1.3.1",
-    "@nx/cypress": "18.0.4",
-    "@nx/eslint": "18.0.4",
-    "@nx/eslint-plugin": "18.0.4",
+    "@nx/cypress": "18.1.0-beta.2",
+    "@nx/eslint": "18.1.0-beta.2",
+    "@nx/eslint-plugin": "18.1.0-beta.2",
     "@nx/js": "18.1.0-beta.2",
     "@nx/nuxt": "18.1.0-beta.2",
-    "@nx/storybook": "18.0.4",
+    "@nx/storybook": "18.1.0-beta.2",
     "@nx/vite": "18.1.0-beta.2",
-    "@nx/vue": "18.0.4",
+    "@nx/vue": "18.1.0-beta.2",
     "@nx/web": "18.1.0-beta.2",
-    "@nx/workspace": "18.0.4",
+    "@nx/workspace": "18.1.0-beta.2",
     "@storybook/addon-essentials": "^7.5.3",
     "@storybook/addon-interactions": "^7.5.3",
     "@storybook/core-server": "^7.5.3",
@@ -51,7 +51,7 @@
     "h3": "^1.8.2",
     "jsdom": "~22.1.0",
     "nuxt": "^3.10.0",
-    "nx": "18.0.4",
+    "nx": "18.1.0-beta.2",
     "prettier": "^2.6.2",
     "storybook": "^7.5.3",
     "ts-node": "10.9.1",
@@ -65,3 +65,4 @@
     "vue-tsc": "^1.8.8"
   }
 }
+
